<?xml version="1.0"?>
<package>
  <name>racecar_safety_node</name>
  <version>0.0.1</version>
  <description>
    tbd
  </description>

  <maintainer email="michael.zill@gmail.com">Michael Zill</maintainer>
  <author email="michael.zill@gmail.com">Michael Zill</author>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/vesc_ackermann</url>
  <url type="repository">https://github.mit.edu/racecar/racecar-iap</url>
  <url type="bugtracker">https://github.mit.edu/racecar/racecar-iap/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>


  
  <run_depend>roscpp</run_depend>
  
  <run_depend>std_msgs</run_depend>


</package>
